--- a/style.css
+++ b/style.css
@@ -6,3 +6,10 @@
     font-family: 'Poppins',sans-serif;
     box-sizing: border-box;
 }
+.container{
+    width: 100%;
+    height: 100vh;
+    background-color: aliceblue;
+    align-items: center;
+    
+}
